DigicielFull/force-app/main/default/objects/PNG_RedkneeInvoicePayments__c/PNG_RedkneeInvoicePayments__c.object-meta.xml
<CustomObject>
    <label>Redknee Invoice Payment</label>
    <nameField>
        <displayFormat>PAY-{00000}</displayFormat>
        <label>Redknee Invoice Payments Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redknee Invoice Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>