DigicielFull/force-app/main/default/objects/PNG_RedkneeInvoicePayments__c/fields/PNG_AccountStatus1__c.field-meta.xml
<CustomField>
    <fullName>PNG_AccountStatus1__c</fullName>
    <formula>IF( PNG_AccountStatus__c = &apos;1&apos;,&apos;Active&apos;,IF(PNG_AccountStatus__c = &apos;0&apos;,&apos;Inactive&apos;,&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>