DigicielFull/force-app/main/default/objects/PNG_RedkneeInvoicePayments__c/fields/PNG_AccountStatus__c.field-meta.xml
<CustomField>
    <fullName>PNG_AccountStatus__c</fullName>
    <label>Account State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>