DigicielFull/force-app/main/default/objects/PNG_RedkneeInvoicePayments__c/fields/PNG_ContactPerson__c.field-meta.xml
<CustomField>
    <fullName>PNG_ContactPerson__c</fullName>
    <label>Contact Person</label>
    <length>250</length>
    <type>Text</type>
</CustomField>