DigicielFull/force-app/main/default/objects/PNG_RedkneeInvoicePayments__c/fields/PNG_CustomerName__c.field-meta.xml
<CustomField>
    <fullName>PNG_CustomerName__c</fullName>
    <label>Customer Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>