DigicielFull/force-app/main/default/objects/PNG_RedkneeInvoicePayments__c/fields/PNG_ServiceName__c.field-meta.xml
<CustomField>
    <fullName>PNG_ServiceName__c</fullName>
    <label>Service Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>