DigicielFull/force-app/main/default/objects/PNG_RedkneeInvoicePayments__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PNG_Account__c</columns>
    <columns>PNG_ServiceMonth__c</columns>
    <columns>PNG_ServiceName__c</columns>
    <columns>PNG_TotalChargeK__c</columns>
    <columns>PNG_TotalPaymentK__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>